Fixed search bar input overlapping arrow

--- a/frontend/PUBLIC/res/css/topbar.css
+++ b/frontend/PUBLIC/res/css/topbar.css
@@ -72,7 +72,7 @@
   background-color: transparent;
   height: 100%;
   width: 100%;
-  padding: 0 1rem 0 3rem;
+  padding: 0 2.5rem 0 3rem;
   margin: 0;
   font-family: 'Poppins';
 
